@@ -1,7 +1,7 @@
 /**********************************************************************
  * $Source: /cvsroot/hibiscus/hibiscus/src/de/willuhn/jameica/hbci/gui/parts/UmsatzList.java,v $
- * $Revision: 1.60 $
- * $Date: 2009/02/12 18:37:17 $
+ * $Revision: 1.61 $
+ * $Date: 2009/03/11 23:44:32 $
  * $Author: willuhn $
  * $Locker:  $
  * $State: Exp $
@@ -373,7 +373,7 @@ public class UmsatzList extends TablePart implements Extendable
                 public void handleEvent(Event event)
                 {
                   Logger.debug("applying filter " + p);
-                  regex.setValue(new Boolean(ir));
+                  regex.setValue(Boolean.valueOf(ir));
                   search.setValue(p);
                   search.focus();
                   kl.process();
@@ -758,6 +758,9 @@ public class UmsatzList extends TablePart implements Extendable
 
 /**********************************************************************
  * $Log: UmsatzList.java,v $
+ * Revision 1.61  2009/03/11 23:44:32  willuhn
+ * @C code cleanup - keine Booleans instanziieren
+ *
  * Revision 1.60  2009/02/12 18:37:17  willuhn
  * @N Erster Code fuer vorgemerkte Umsaetze
  *
